[tool.poetry]
name = "reflection-agent"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.7"
langchain-openai = "^0.2.8"
langgraph = "^0.2.50"
python-dotenv = "^1.0.1"
isort = "^5.13.2"
grandalf = "^0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
